--- a/currency-rate.html
+++ b/currency-rate.html
@@ -140,7 +140,7 @@
 
         .currency-calculator {
             padding: 20px;
-            border: 1px solid #ccc;
+            border: none;
             border-radius: 8px;
             margin-left: 100px;
             margin-right: 100px;
