--- a/currency-rate.html
+++ b/currency-rate.html
@@ -233,20 +233,43 @@
     .disclaimer:hover span {
         display: block;
     }
+
+    @media screen and (max-width: 600px) {
+        .content {
+            padding: 0;
+            flex-direction: column;
+        }
+
+        .left-section {
+            padding: 0;
+        }
+
+        .left-section h1 {
+            margin-left: 0;
+        }
+    }
+
     </style>
 </head>
 <body>
 
     <header>
         <div class="logo">
-            <img src="logotravelwise.png" alt="Travel Wise Logo">
+            <img src="logotravelwise.png">
             <h1>Travel Wise</h1>
         </div>
-        <nav>
-            <a href="#">Smart Search</a>
-            <a href="#">Destinations</a>
-            <a href="#">Currency Rates</a>
-            <a href="#">Budgeting Hacks</a>
+
+        <button id="menu-button">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
+
+        <nav class="nav-list" id="myNav-list">
+            <a class="nav-item" href="#">Smart Search</a>
+            <a class="nav-item" href="#">Destinations</a>
+            <a class="nav-item" href="#">Currency Rates</a>
+            <a class="nav-item" href="#">Budgeting Hacks</a>
         </nav>
     </header>
 
@@ -340,5 +363,13 @@
             &copy; 2023 TravelWise. All rights reserved.
         </div>
     </footer>
+
+    <script>
+        const menuButton = document.getElementById('menu-button');
+        
+        menuButton.addEventListener('click', function () {
+            this.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
