--- a/currency-rate.html
+++ b/currency-rate.html
@@ -238,14 +238,53 @@
         .content {
             padding: 0;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
         }
 
         .left-section {
             padding: 0;
+            text-align: center;
         }
 
         .left-section h1 {
+            white-space: unset;
+            font-size: 50px;
+            text-align: center;
             margin-left: 0;
+        }
+
+        .left-section p {
+            text-align: center;
+            margin-left: 0;
+        }
+
+        .button {
+            margin: 0;
+            margin: 20px auto 2rem;
+        }
+
+        .right-section img {
+            width: 0;
+        }
+
+        .currency-calculator {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            margin: 0;
+            margin: 1rem 4rem 2rem;
+        }
+
+        input {
+            text-align: center;
+        }
+
+        select {
+            width: 87%;
         }
     }
 
