--- a/home.html
+++ b/home.html
@@ -91,6 +91,14 @@
             width: 20%;
             border-radius: 30px;
             background-color: #e3e2e1;
+            /* background: var(--white, #FFF);*/
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                        0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                        0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                        0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                        0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                        0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+            text-align: center;
         }
 
         .works-steps h5{
