--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -83,7 +83,7 @@
             flex: 1;
             padding: 20px;
             max-width: 340px;
-            border-radius: 47.884px; /* Updated border-radius value */
+            border-radius: 47.884px; 
             background: var(--white, #FFF);
             box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
                         0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
@@ -275,7 +275,7 @@
         <div class="left-section">
             <h1>Budgeting Hacks</h1>
             <p>
-                Unlock the secrets to savvy budgeting with TravelWise's expert-approved Budgeting Hacks. Make the most of every penny and enhance your travel experience with these insider tips:
+                Unlock the secrets to savvy budgeting with TravelWise's expert-approved Budgeting Hacks. Our main hacks are divided into three categories: how to save money in Transportation, Accommodation, and Activities during your trip!
             </p>
         </div>
         <div class="right-section">
