--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -326,7 +326,7 @@
     </div>
 
     <div class="activities">
-        <h2>Activities Savings</h2>
+        <h2>Budget-friendly Activities</h2>
         <div class="activities-allsteps">
             <div class="activities-steps">
                 <img src="dine.png">
