--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -289,17 +289,17 @@
             <div class="transportation-steps">
                 <img src="plane.png">
                 <h5>Flight Booking Hack</h5>
-                <p>Make sure to clear your cookies and browsing history to avoid price increases. When you search for flights, signaling your intent to purchase, prices may surge daily, potentially pressuring you to make impulsive decisions. To mitigate this, consider deleting cookies or utilizing incognito mode during your browsing sessions.</p>
+                <p>Make sure to clear your cookies and browsing history to avoid price increases. To mitigate this, consider deleting cookies or utilizing incognito mode during your browsing sessions.</p>
             </div>
             <div class="transportation-steps">
                 <img src="bus.png">
                 <h5>Optimizing Public Transportation</h5>
-                <p>Learn how to navigate local transportation networks, discover money-saving hacks for rideshares, and explore the benefits of public transportation for budget-friendly commuting—all while optimizing your travel experience with TravelWise's expert tips.</p>
+                <p>Learn how to navigate local transportation networks, discover money-saving hacks for rideshares, and explore the benefits of public transportation while optimizing your travel experience.</p>
             </div>
             <div class="transportation-steps">
                 <img src="bike.png">
                 <h5>Hidden Transportation Gems</h5>
-                <p>Delve into lesser-known transportation options, such as local shuttles, bike rentals, rental scooters, or even walking tours, to explore your destination in a budget-friendly and eco-friendly way. Engaging with these options can lead to unexpected and memorable travel encounters, while saving a lot of money.</p>
+                <p>Delve into lesser-known transportation options, such as local shuttles, bike rentals, rental scooters, or even walking tours, to explore your destination in a budget-friendly and eco-friendly way. </p>
             </div>
         </div>
     </div>
@@ -331,7 +331,7 @@
             <div class="activities-steps">
                 <img src="dine.png">
                 <h5>Dining on a Dime</h5>
-                <p>Escape the touristy areas to uncover hidden gems that locals frequent. Venture into neighborhoods less frequented by tourists, and you're likely to find eateries serving authentic cuisine at prices that won't strain your budget.</p>
+                <p>Escape the touristy areas to uncover hidden gems that locals frequent. Venture into neighborhoods less frequented by tourists, and you're likely to find eateries serving authentic cuisine.</p>
             </div>
             <div class="activities-steps">
                 <img src="museums.png">
@@ -341,7 +341,7 @@
             <div class="activities-steps">
                 <img src="events.png">
                 <h5>Local Events and Festivals</h5>
-                <p>Check local event calendars for festivals, concerts, or cultural events happening during your visit. Often, these events are free or have minimal entry fees, providing a taste of local culture.</p>
+                <p>Check local event calendars for festivals, concerts, or cultural events happening during your visit. Often, these events are free or have minimal entry fees.</p>
             </div>
         </div>
     </div>
