--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -287,7 +287,7 @@
         <h2>Transportation Tips</h2>
         <div class="transportation-allsteps">
             <div class="transportation-steps">
-                <img src="plane.png">
+                <img src="miniplane.png">
                 <h5>Flight Booking Hack</h5>
                 <p>Make sure to clear your cookies and browsing history to avoid price increases. To mitigate this, consider deleting cookies or utilizing incognito mode during your browsing sessions.</p>
             </div>
