--- a/index.html
+++ b/index.html
@@ -291,12 +291,12 @@
             <div class="works-steps">
                 <img src="images/home/budget.png" alt="Budget">
                 <h5>Set your budget</h5>
-                <p>Start by setting your travel budget in your preferred currency.</p>
+                <p>Start by setting your travel budget in United States Dollars.</p>
             </div>
             <div class="works-steps">
                 <img src="images/home/earth.png" alt="Earth">
                 <h5>Use our Smart Search tool</h5>
-                <p>Start by setting your travel budget in your preferred currency.</p>
+                <p>Explore a curated list of affordable destinations tailored to your budget.</p>
             </div>
             <div class="works-steps">
                 <img src="images/home/itinerary.png" alt="itinerary">
