--- a/currency-rate.html
+++ b/currency-rate.html
@@ -155,6 +155,7 @@
         .input-group {
             margin-bottom: 15px;
             font-family: 'Poppins', sans-serif;
+            color: #6C6C6C; 
         }
 
         label {
