--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
         <nav class="nav-list" id="myNav-list">
             <a class="nav-item" href="#">Smart Search</a>
             <a class="nav-item" href="#">Destinations</a>
+            <a class="nav-item" href="#">Our Packages</a>
             <a class="nav-item" href="#">Currency Rates</a>
             <a class="nav-item" href="#">Budgeting Hacks</a>
         </nav>
@@ -370,8 +371,10 @@
         </div>
         <img src="logotravelwise.png" alt="Travel Wise Logo" class="logo-small">
         <div class="page-links">
+            <a href="#">Home</a>
             <a href="#">Smart Search</a>
             <a href="#">Destinations</a>
+            <a href="#">Our Packages</a>
             <a href="#">Currency Rates</a>
             <a href="#">Budgeting Hacks</a>
         </div>
