--- a/packages.html
+++ b/packages.html
@@ -271,8 +271,10 @@
         </div>
         <img src="logotravelwise.png" alt="Travel Wise Logo" class="logo-small">
         <div class="page-links">
+            <a href="#">Home</a>
             <a href="#">Smart Search</a>
             <a href="#">Destinations</a>
+            <a href="#">Our Packages</a>
             <a href="#">Currency Rates</a>
             <a href="#">Budgeting Hacks</a>
         </div>
