--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
             </div>
             <div class="works-steps">
                 <img src="images/home/itinerary.png" alt="itinerary">
-                <h5>Plan itinerary</h5>
-                <p>Estimate costs, book accommodations, and plan activities – all within your budget!</p>
+                <h5>Explore our Packages</h5>
+                <p>Make your life easier with our affordable travel packages and get help planning the trip of your dreams.</p>
             </div>
             <div class="works-steps">
                 <img src="images/home/expenses.png" alt="Expenses">
