--- a/packages.html
+++ b/packages.html
@@ -168,11 +168,12 @@
             <img src="logotravelwise.png" alt="Travel Wise Logo">
             <h1>Travel Wise</h1>
         </div>
-        <nav>
-            <a href="#">Smart Search</a>
-            <a href="#">Destinations</a>
-            <a href="#">Currency Rates</a>
-            <a href="#">Budgeting Hacks</a>
+        <nav class="nav-list" id="myNav-list">
+            <a class="nav-item" href="#">Smart Search</a>
+            <a class="nav-item" href="#">Destinations</a>
+            <a class="nav-item" href="#">Our Packages</a>
+            <a class="nav-item" href="#">Currency Rates</a>
+            <a class="nav-item" href="#">Budgeting Hacks</a>
         </nav>
     </header>
 
