--- a/index.html
+++ b/index.html
@@ -355,6 +355,18 @@
                 <p>College Student</p>
             </div>  
         </div>
+
+        <div class="testimonial-entry">
+            <img src="images/home/Girl.jpeg" alt="Girl">
+            <div class="testimonial-text">
+                <p>“I recently had the pleasure of using TravelWise to plan a group trip for a milestone 
+                    celebration, and I couldn't be happier with the experience. From the initial 
+                    consultation to the final farewell, TravelWise demonstrated unparalleled expertise,
+                    dedication, and a genuine commitment to making our trip extraordinary.”</p><br>
+                <p><b>Richard Miller</b></p>
+                <p>Lawyer</p>
+            </div>  
+        </div>
     </div>
     
 
