--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
         }
 
         .testimonials-section{
-            display: flex;
             justify-content: center;
             padding: 75px 0px 50px 0px;
             gap: 50px;
+            margin-left: 20%;
             
         }
 
@@ -223,7 +223,7 @@
         }
 
         .testimonial-entry{
-            width: 40%;
+            width: 70%;
 
         }
 
