--- a/index.html
+++ b/index.html
@@ -356,13 +356,13 @@
             </div>  
         </div>
 
-        <br>
+        <br><br>
         <div class="testimonial-entry">
-            <img src="images/home/Girl.jpeg" alt="Girl">
+            <img src="images/home/manheadshot.png" alt="Man">
             <div class="testimonial-text">
-                <p>“I recently had the pleasure of using TravelWise to plan a group trip for a milestone 
-                    celebration, and I couldn't be happier with the experience. From the initial 
-                    consultation to the final farewell, TravelWise demonstrated unparalleled expertise,
+                <p>“I recently had the pleasure of using TravelWise to plan a group trip,
+                    and I couldn't be happier with the experience. From the 
+                    consultation to the farewell, TravelWise demonstrated unparalleled expertise,
                     dedication, and a genuine commitment to making our trip extraordinary.”</p><br>
                 <p><b>Richard Miller</b></p>
                 <p>Lawyer</p>
