--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <h2>What People Say <br>About Us</h2>
         </div>
         <div class="testimonial-entry">
-            <img src="images/home/Girl.jpeg" alt="Girl">
+            <img src="images/home/newgirl.png" alt="Girl">
             <div class="testimonial-text">
                 <p>“TravelWise helped me plan my senior graduation trip with my college roommates!
                     As recent grads, our budget was skim but we spent the most amazing days in Indonesia
