--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             margin-top: 30px;
         }
 
+        .find-out-more-btn: hover {
+            background-color: #5842A3;
+            color: white;
+        }
+
         .intro-section img{
             flex: 1;
             height: auto;
