--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         .find-out-more-btn:hover {
             background-color: #5842A3;
             color: white;
+            box-shadow: 2px 2px 2px 2px #666;
         }
 
         .intro-section img{
