--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <div class="testimonials-section">
         <div class="testimonial-heading">
             <h5>TESTIMONIALS</h5>
-            <h2>What People Say <br>About Us</h2>
+            <h2>What People Say About Us</h2>
         </div>
         <div class="testimonial-entry">
             <img src="images/home/newgirl.png" alt="Girl">
