--- a/index.html
+++ b/index.html
@@ -216,8 +216,9 @@
         }
 
         .testimonial-heading h5{
-            color: #5842A3;
-            font-size: 14px;
+            color: #F76A09;
+            font-size: 17px;
+            margin-left: 50px;
         }
 
         .testimonial-heading h2{
@@ -225,7 +226,7 @@
             font-family: Volkhov;
             font-size: 30px;
             font-weight: 700;
-            margin-top: -10px;
+            margin-bottom: 50px;
         }
 
         .testimonial-entry{
