--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
         }
 
         .testimonials-section{
+            text-align: center;
             justify-content: center;
             padding: 75px 0px 50px 0px;
             gap: 50px;
