--- a/index.html
+++ b/index.html
@@ -255,10 +255,8 @@
         }
 
         .find-out-more-btn:hover {
-            background-color: #5842A3;
+            background-color: #f9ad77; 
             color: white;
-            box-shadow: 2px 2px 2px 2px #666;
-
         }
 
     </style>
