--- a/packages.html
+++ b/packages.html
@@ -181,7 +181,7 @@
         <div class="left-section">
             <h1>TravelWise Packages</h1>
             <p>
-                Say goodbye to generic travel plans. Our team of experienced travel agents will work closely with you to create a personalized itinerary tailored to your preferences and interests. Explore all of our affordable package options and choose the one that fits your needs and budget! Check out our options:
+                Say goodbye to generic travel plans. Our team of experienced travel agents will work closely with you to create a personalized itinerary tailored to your preferences and interests. Explore all of our affordable package options and choose the one that fits your needs and budget! The first consultation with a TravelWise agent is free! Check out our options:
             </p>
             <p>1. Premium Package - Best Value!</p>
             <p>2. Intermediate Package </p>
@@ -209,7 +209,7 @@
             <tbody>
                 <tr>
                     <td>Premium Package <br> Best Value!</td>
-                    <td>$200 one-time payment</td>
+                    <td><strong>First consultation is free</strong>, then $200 one-time payment</td>
                     <td>
                         <ul>
                             <li>• Full-Service Concierge</li>
@@ -224,7 +224,7 @@
                     <td><button class="package-signup-button">Sign Up</button></td>
                 <tr>
                     <td>Intermediate Package</td>
-                    <td>$150 one-time payment</td>
+                    <td><strong>First consultation is free</strong>, then $150 one-time payment</td>
                     <td>
                         <ul>
                             <li>• Itinerary Planning and Booking Assistance</li>
@@ -240,7 +240,7 @@
                 </tr>
                 <tr>
                     <td>Basic Package</td>
-                    <td>$100 one-time payment</td>
+                    <td><strong>First consultation is free</strong>, then $150 one-time payment</td>
                     <td>
                         <ul>
                             <li>• Budget-Focused Assistance</li>
