--- a/packages.html
+++ b/packages.html
@@ -20,14 +20,19 @@
                     emailInput.value = ''; // Clear the email input
                 }
             });
+
+            function scrollToPackages() {
+                const packagesSection = document.getElementById('packages-section');
+                packagesSection.scrollIntoView({ behavior: 'smooth' });
+            }
+
+            const signUpButtons = document.querySelectorAll('.package-signup-button');
+            signUpButtons.forEach(function(button) {
+                button.addEventListener('click', function () {
+                    window.location.href = 'https://moizeshenriques.github.io/travelwise/sign-up.html';
+                });
+            });
         });
-
-    function scrollToPackages() {
-    const packagesSection = document.getElementById('packages-section');
-    packagesSection.scrollIntoView({ behavior: 'smooth' });
-}
-
-
     </script>
     <style>
             .content {
