--- a/packages.html
+++ b/packages.html
@@ -186,7 +186,7 @@
         <div class="left-section">
             <h1>TravelWise Packages</h1>
             <p>
-                Say goodbye to generic travel plans. Our team of experienced travel agents will work closely with you to create a personalized itinerary tailored to your preferences and interests. Explore all of our affordable package options and choose the one that fits your needs and budget! The first consultation with a TravelWise agent is free! Check out our options:
+                Say goodbye to generic travel plans. Our team of experienced travel agents will work with you to create a personalized itinerary tailored to your preferences. <strong>The first consultation with a TravelWise agent is free!</strong> Explore all of our affordable package options and choose the one that fits your needs and budget:
             </p>
             <p>1. Premium Package - Best Value!</p>
             <p>2. Intermediate Package </p>
