--- a/packages.html
+++ b/packages.html
@@ -281,3 +281,11 @@
             &copy; 2023 TravelWise. All rights reserved.
         </div>
     </footer>
+    <script> function scrollToPackages() {
+    console.log("Scrolling to packages section");
+    const packagesSection = document.getElementById('packages-section');
+    packagesSection.scrollIntoView({ behavior: 'smooth' });
+}
+    </script>
+    </body>
+</html>
