--- a/packages.html
+++ b/packages.html
@@ -219,7 +219,7 @@
                             <li>• Customized travel packages for special occasions</li>
                         </ul>
                     </td>
-                    <td><button class="package-signup-button">Sign Up</button></td>
+                    <td><a href="https://moizeshenriques.github.io/travelwise/sign-up.html" class="package-signup-button">Sign Up</a></td>
                 <tr>
                     <td>Intermediate Package</td>
                     <td><strong>First consultation is free</strong>, then $150 one-time payment</td>
@@ -234,7 +234,7 @@
                             <li>• Assistance with visa and travel documentation</li>
                         </ul>
                     </td>
-                    <td><button class="package-signup-button">Sign Up</button></td>
+                    <td><a href="https://moizeshenriques.github.io/travelwise/sign-up.html" class="package-signup-button">Sign Up</a></td>
                 </tr>
                 <tr>
                     <td>Basic Package</td>
@@ -250,7 +250,7 @@
                             <li>• Regular updates on budget travel trends</li>
                         </ul>
                     </td>
-                    <td><button class="package-signup-button">Sign Up</button></td>
+                    <td><a href="https://moizeshenriques.github.io/travelwise/sign-up.html" class="package-signup-button">Sign Up</a></td>
                 </tr>
             </tbody>
         </table>
