--- a/packages.html
+++ b/packages.html
@@ -149,6 +149,7 @@
             font-size: 14px;
             border-radius: 4px;
             cursor: pointer;
+            white-space: nowrap;
             font-family: 'Poppins', sans-serif;
         }
 
