--- a/sign-up.html
+++ b/sign-up.html
@@ -48,6 +48,19 @@
         });
     </script>
     <style>
+                .content {
+            display: flex;
+            padding: 20px;
+        }
+        
+        .signup-container {
+            max-width: 600px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
         h2 {
             color: #5842A3;
             text-align: center;
