--- a/packages.html
+++ b/packages.html
@@ -91,6 +91,7 @@
             font-family: 'Poppins', sans-serif;
             margin-left: 100px;
             margin-top: 30px;
+            text-decoration: none;
         }
 
         .packages-section {
