--- a/packages.html
+++ b/packages.html
@@ -152,6 +152,7 @@
             cursor: pointer;
             white-space: nowrap;
             font-family: 'Poppins', sans-serif;
+            text-decoration: none;
         }
 
         .package-signup-button:hover {
