--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -254,6 +254,39 @@
         .activities-steps:nth-child(3) img {
             width: 65%; 
         }
+
+        @media screen and (max-width: 600px) {
+            .content {
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .left-section {
+                width: 100%;
+                text-align: center;
+            }
+
+            .left-section h1 {
+                margin-left: 0;
+                white-space: normal;
+                font-size: 35px;
+            }
+
+            .left-section p {
+                margin-left: 0;
+                font-size: 18px;
+            }
+
+            .right-section {
+                width: 100%;
+                padding-top: 0;
+            }
+
+            .transportation-allsteps, .accommodation-allsteps, .activities-allsteps {
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 <body>
@@ -263,6 +296,13 @@
             <img src="logotravelwise.png" alt="Travel Wise Logo">
             <h1>Travel Wise</h1>
         </div>
+
+        <button id="menu-button">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
+
         <nav class="nav-list" id="myNav-list">
             <a class="nav-item" href="#">Smart Search</a>
             <a class="nav-item" href="#">Destinations</a>
@@ -371,6 +411,12 @@
             &copy; 2023 TravelWise. All rights reserved.
         </div>
     </footer>
-
+    <script>
+        const menuButton = document.getElementById('menu-button');
+        
+        menuButton.addEventListener('click', function () {
+            this.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
