--- a/currency-rate.html
+++ b/currency-rate.html
@@ -277,7 +277,7 @@
             justify-content: center;
             text-align: center;
             margin: 0;
-            margin: 1rem 4rem 2rem;
+            margin: 1rem;
         }
 
         input {
