bali progress on mobile friendly

--- a/bali.html
+++ b/bali.html
@@ -58,6 +58,22 @@
         font-size: 22px;
     }
 
+    @media screen and (max-width: 600px) {
+        .explore-bali-section {
+            padding: 20px;
+            text-align: center;
+        }
+        
+        .explore-bali-section img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .bali-essentials-section {
+            padding: 20px;
+            text-align: center;
+        }
+    }
     </style>
 </head>
 <body>
@@ -76,6 +92,7 @@
         <nav class="nav-list" id="myNav-list">
             <a class="nav-item" href="#">Smart Search</a>
             <a class="nav-item" href="#">Destinations</a>
+            <a class="nav-item" href="#">Our Packages</a>
             <a class="nav-item" href="#">Currency Rates</a>
             <a class="nav-item" href="#">Budgeting Hacks</a>
         </nav>
@@ -136,8 +153,10 @@
         </div>
         <img src="logotravelwise.png" alt="Travel Wise Logo" class="logo-small">
         <div class="page-links">
+            <a href="#">Home</a>
             <a href="#">Smart Search</a>
             <a href="#">Destinations</a>
+            <a href="#">Our Packages</a>
             <a href="#">Currency Rates</a>
             <a href="#">Budgeting Hacks</a>
         </div>
